# CubismUP_3D

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  requirements.txt
Cubism/include/Cubism/: ArgumentParser.h  BlockInfo.h  BlockLab.h  BlockProcessing.h  DependencyCubeMPI.h  Grid.h  GridMPI.h  GridMorton.h  HDF5Dumper.h  HDF5Dumper_MPI.h  HDF5SliceDumper.h  HDF5SliceDumperMPI.h  HDF5SubdomainDumper.h  HDF5SubdomainDumperMPI.h  Histogram.h  Indexers.h  LosslessCompression.h  Matrix3D.h  Matrix4D.h  MeshKernels.h  MeshMap.h  PlainBinDumper_MPI.h  ZBinDumper.h  ZBinDumper_MPI.h
Cubism/src/: ArgumentParser.cpp  Histogram.cpp
Cubism/tests/: common.h
Cubism/tests/argparser/: .gitignore  Makefile  run.sh  test.conf  testArgumentParser.cpp
Cubism/tests/dumpers/: Makefile  testDumpsMPI.cpp
Cubism/tests/synchronizer/: Makefile
Cubism/tools/gridmanip/: .gitignore  BlockProcessor_MPI.h  GridOperator.h  Makefile  README.md  Types.h  main.cpp
Cubism/tools/gridmanip/Example/: Makefile  prolong.conf  restrict.conf  smoother.conf
Cubism/tools/gridmanip/Prolongation/: MPI_GridTransfer.h  ProlongHarten.h
Cubism/tools/gridmanip/Restriction/: RestrictBlockAverage.h
Cubism/tools/gridmanip/Smoother/: Smoother.h
cmake/: CubismUP3DDependencies.template.txt  CubismUP3DMacros.template.h  FindFFTW.cmake  check_mpi_thread_safety.cpp
launch/: HIT_sbatch  config_form.html  launchAllHIT.py  launchDaint.sh  launchDaint_debug.sh  launchDaint_mc.sh  launchEuler.sh  launchEuler_MPI.sh  launchFalcon.sh  launchLESHIT.py  launchMac.sh  settingsCarling.sh  settingsCarling_OSP.sh  settingsChannel.sh  settingsChannel_nonUniform.sh  settingsDcyl.sh  settingsDcyl_Fish.sh  settingsHIT.sh  settingsHIT_DNS.sh  settingsIcFromH5.sh  settingsNaca.sh  settingsNacaHeaving.sh  settingsPlate.sh  settingsSphere.sh  settingsSphere_HYPRE.sh  settingsSphere_PETSC.sh  settingsSphere_nonUniform.sh  settingsStefan.sh  settingsTaylorGreen.sh  settingsTinyCarling.sh  settingsTinySphere.sh  surfacePointsRaw2txt.py
launch/validationTests/: MRAG3DsettingsCarling_re550.sh  factoryCarling  factoryRevBody  factorySphere_Re20  factorySphere_Re3000  factorySphere_Re50  settingsValidateCarlingRe550.sh  settingsValidateRevBody.sh  settingsValidateSphere_Re100.sh  settingsValidateSphere_Re20.sh  settingsValidateSphere_Re3000.sh  settingsValidateSphere_Re50.sh  validation_fish_Re200_unbounded_energyBalance.tgz
makefiles/: Makefile  make.daint  make.daint_mpich  make.euler  make.gcc.flags  make.glados  make.icc.flags  make.macos  make.panda
source/: Base.h  Definitions.h  ObstacleBlock.h  Simulation.cpp  Simulation.h  SimulationData.cpp  SimulationData.h  cubism_main.cpp  main.cpp  main_RL_HIT.cpp
source/bindings/: Common.h  Obstacles.cpp  Simulation.cpp
source/obstacles/: CarlingFish.cpp  CarlingFish.h  Cylinder.cpp  Cylinder.h  Ellipsoid.cpp  Ellipsoid.h  ExternalObstacle.cpp  ExternalObstacle.h  Fish.cpp  Fish.h  FishLibrary.cpp  FishLibrary.h  FishShapes.cpp  FishShapes.h  Naca.cpp  Naca.h  Obstacle.cpp  Obstacle.h  ObstacleFactory.cpp  ObstacleFactory.h  ObstacleFromShape.h  ObstacleVector.cpp  ObstacleVector.h  Plate.cpp  Plate.h  Sphere.cpp  Sphere.h  StefanFish.cpp  StefanFish.h
source/obstacles/deprecate/: ElasticFishOperator.cpp  ElasticFishOperator.h  LinearInterpolation.h
source/obstacles/extra/: CarlingFish_extra.h  FactoryFileLineParser.h  Frenet.h  Interpolation1D.h  ObstacleLibrary.h  Schedulers.h
source/operators/: AdvectionDiffusion.cpp  AdvectionDiffusion.h  Analysis.cpp  Analysis.h  CellwiseOperator.h  Checkpoint.cpp  Checkpoint.h  ComputeDissipation.cpp  ComputeDissipation.h  ExternalForcing.cpp  ExternalForcing.h  FadeOut.cpp  FadeOut.h  FixedMassFlux_nonUniform.cpp  FixedMassFlux_nonUniform.h  FluidSolidForces.cpp  FluidSolidForces.h  HITfiltering.cpp  HITfiltering.h  InitialConditions.cpp  InitialConditions.h  IterativePressureNonUniform.cpp  IterativePressureNonUniform.h  IterativePressurePenalization.cpp  IterativePressurePenalization.h  LinearInterpolation.h  ObstaclesCreate.cpp  ObstaclesCreate.h  ObstaclesUpdate.cpp  ObstaclesUpdate.h  Operator.h  Penalization.cpp  Penalization.h  PressureProjection.cpp  PressureProjection.h  PressureRHS.cpp  PressureRHS.h  ProcessHelpers.h  SGS.cpp  SGS.h  (+2 more)
source/poisson/: PoissonSolver.cpp  PoissonSolver.h  PoissonSolverACCPeriodic.cpp  PoissonSolverACCPeriodic.h  PoissonSolverACCUnbounded.cpp  PoissonSolverACCUnbounded.h  PoissonSolverACC_common.h  PoissonSolverACC_kernels.cu  PoissonSolverHYPREMixed.cpp  PoissonSolverHYPREMixed.h  PoissonSolverMixed.cpp  PoissonSolverMixed.h  PoissonSolverPETSCMixed.cpp  PoissonSolverPETSCMixed.h  PoissonSolverPeriodic.cpp  PoissonSolverPeriodic.h  PoissonSolverUnbounded.cpp  PoissonSolverUnbounded.h  PoissonSolver_common.h
source/spectralOperators/: HITstatistics.h  HITtargetData.h  SpectralAnalysis.cpp  SpectralAnalysis.h  SpectralForcing.cpp  SpectralForcing.h  SpectralIcGenerator.cpp  SpectralIcGenerator.h  SpectralManip.cpp  SpectralManip.h  SpectralManipACC.cpp  SpectralManipACC.h  SpectralManipFFTW.cpp  SpectralManipFFTW.h
source/utils/: AlignedAllocator.h  BufferedLogger.cpp  BufferedLogger.h  FDcoeffs.h  MatArrayMath.h  NonUniformScheme.h  ScalarArray.h  StateRewardData.h  TaskLayer.h  Timer.h
tests/: CMakeLists.txt  test_grid.py
tests/cubismup3d/: TestBoundaries.cpp  TestBufferedLogger.cpp  TestInterpolation.cpp  Utils.cpp  Utils.h
tests/python/: test_obstacles.py  utils.py
